2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.addin.xml: Bump add-in versions.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Update after build reorg.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* Makefile.am: Only build the GtkCore addin if we have gnome-sharp 
	  available.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.mdp, lib/libsteticui.mdp, lib/libstetic.mdp,
	  Makefile.am: Directory reorganization.

2007-11-20  Lluis Sanchez Gual <lluis@novell.com> 

	* gui.glade, MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs: Removed
	  Gnome.FileEntry.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GtkProjectServiceExtension.cs: Track
	  LoggingService API changes.

2007-11-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs: Use RootCombine
	  instead of CurrentOpenCombine when possible.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.addin.xml: Bump MD version.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: Fix nullref. Happens
	  when removing a project from a solution while one of the windows of that
	  project is open.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/ActionGroup.xft.xml, templates/ActionGroupPartial.xft.xml,
	  templates/Dialog.xft.xml, templates/DialogPartial.xft.xml,
	  templates/Widget.xft.xml, templates/WidgetPartial.xft.xml,
	  templates/Window.xft.xml, templates/WindowPartial.xft.xml: Use tango
	  file icons. Removed obsolete icons.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.Dialogs/GtkFeatureWidget.cs: Track api changes. Added
	  Description property.
